# basic-auth-plugin

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  Makefile  docker-compose.yaml  envoy.yaml  readme.md
.github/workflows/: build.yml  documentation.yml  release.yml  test.yml
demo/: README.md  certificate-production.yml  configmap.yml  deployment-pre-built.yml  hpa.yaml  ingress.yml  service.yml
src/: auth.rs  config.rs  lib.rs  root.rs
