[package]
publish = false
name = "basic-auth-plugin"
version = "0.0.1"
authors = ["Anton Engelhardt <antoncengelhardt@icloud.com>"]
description = "A plugin for Envoy, written in Rust, that implements basic authentication and stores it in an encrypted cookie to persist across browser sessions."
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
# aes256
aes-gcm = { version = "0.10.3", features = ["std"] }

# base64
base64 = "0.22.1"

# logging
log = "0.4.22"

# proxy-wasm
proxy-wasm = "0.2.2"

# serde
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.132"

# secret
sec = { version = "1.0.0", features = ["serde", "deserialize"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
